<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.client.measurements.MeasurementActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            >
            <TextView
                android:id="@+id/title_measurement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="Feature Instructions"
                android:fontFamily="@font/poppins_bold"
                android:textSize="18sp"
                android:textColor="@color/brown_gold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/rules"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rules"
                android:fontFamily="@font/poppins_regular"
                android:textSize="16sp"
                android:textColor="@color/brown_gold"
                app:layout_constraintTop_toBottomOf="@id/title_measurement"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>


            <Spinner
                android:id="@+id/sp_type"
                android:layout_width="fill_parent"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:entries="@array/type"
                android:backgroundTint="@color/brown_gold"
                app:layout_constraintTop_toBottomOf="@id/rules"
                app:layout_constraintStart_toStartOf="@id/rules"
                app:layout_constraintEnd_toEndOf="@id/rules"
                />

            <TextView
                android:id="@+id/title_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/type"
                android:fontFamily="@font/poppins_bold"
                android:textSize="14sp"
                android:textColor="@color/brown_gold"
                app:layout_constraintTop_toBottomOf="@id/sp_type"
                app:layout_constraintStart_toStartOf="@id/rules" />

            <RadioGroup
                android:id="@+id/rg_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="@id/rules"
                app:layout_constraintTop_toBottomOf="@id/title_type">
                <RadioButton
                    android:id="@+id/rd_long"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:text="@string/long_type"
                    android:checked="false"
                    android:buttonTint="@color/brown_gold"
                    android:fontFamily="@font/poppins_regular"
                    android:theme="@style/MyCheckBox"
                    android:textColor="@color/brown_gold"
                     />

                <RadioButton
                    android:id="@+id/rd_short"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:text="@string/short_type"
                    android:checked="false"
                    android:buttonTint="@color/brown_gold"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/poppins_regular"
                    android:textColor="@color/brown_gold"
                    android:theme="@style/MyCheckBox" />
            </RadioGroup>



            <TextView
                android:id="@+id/title_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/gender"
                android:fontFamily="@font/poppins_bold"
                android:textSize="14sp"
                android:textColor="@color/brown_gold"
                app:layout_constraintTop_toBottomOf="@id/rg_type"
                app:layout_constraintStart_toStartOf="@id/rules" />

            <RadioGroup
                android:id="@+id/rg_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="@id/rules"
                app:layout_constraintTop_toBottomOf="@id/title_gender">
                <RadioButton
                    android:id="@+id/rd_male"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:text="@string/male"
                    android:buttonTint="@color/brown_gold"
                    android:checked="false"
                    android:fontFamily="@font/poppins_regular"
                    android:textColor="@color/brown_gold"
                    android:theme="@style/MyCheckBox"
                    app:layout_constraintStart_toStartOf="@id/rules"
                    app:layout_constraintTop_toBottomOf="@id/title_gender" />

                <RadioButton
                    android:id="@+id/rd_female"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:text="@string/female"
                    android:checked="false"
                    android:buttonTint="@color/brown_gold"
                    android:theme="@style/MyCheckBox"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/poppins_regular"
                    android:textColor="@color/brown_gold"
                    app:layout_constraintStart_toEndOf="@id/rd_male"
                    app:layout_constraintTop_toTopOf="@id/rd_male"
                    app:layout_constraintBottom_toBottomOf="@id/rd_male" />

            </RadioGroup>


            <TextView
                android:id="@+id/title_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_image"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins_bold"
                android:textSize="14sp"
                android:textColor="@color/brown_gold"
                app:layout_constraintTop_toBottomOf="@id/rg_gender"
                app:layout_constraintStart_toStartOf="@id/rules"
                />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:cardElevation="5dp"
                app:layout_constraintTop_toBottomOf="@id/title_img">
                <ImageView
                    android:id="@+id/user_photo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/dummy_photo"
                    android:contentDescription="@string/user_photo" />
            </com.google.android.material.card.MaterialCardView>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_open_camera"
                android:layout_width="match_parent"
                android:textSize="16sp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/btn_open_camera"
                android:textColor="@color/white"
                android:background="@drawable/bg_button_primary"
                app:layout_constraintTop_toBottomOf="@id/cardView" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_back"
                android:layout_width="match_parent"
                android:textSize="16sp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/btn_back_measurement"
                android:textColor="@color/brown_gold"
                android:background="@drawable/bg_button_secondary"
                app:layout_constraintTop_toBottomOf="@id/btn_open_camera" />
        </androidx.constraintlayout.widget.ConstraintLayout>





    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
