<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_1"
    android:padding="16dp"
    tools:context=".ui.login.LoginActivity">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="?attr/actionBarSize"
        android:background="@color/brown_gold"
        android:src="@drawable/ic_launcher_foreground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/tv_Username"
        android:textColor="@color/brown_gold"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_logo" />

    <EditText
        android:id="@+id/edt_username"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/bg_edittext"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/hint_username"
        android:maxLines="1"
        android:textColor="@color/brown_gold"
        android:paddingHorizontal="16dp"
        android:textColorHint="@color/brown_gold"
        app:layout_constraintTop_toBottomOf="@+id/tv_user" />

    <TextView
        android:id="@+id/tv_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/tv_pass"
        android:textColor="@color/brown_gold"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_username" />

    <EditText
        android:id="@+id/edt_pass"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/bg_edittext"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/hint_pass"
        android:maxLines="1"
        android:textColor="@color/brown_gold"
        android:paddingHorizontal="16dp"
        android:textColorHint="@color/brown_gold"
        app:layout_constraintTop_toBottomOf="@+id/tv_pass" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="54dp"
        android:layout_weight="1"
        android:fontFamily="@font/poppins_medium"
        android:text="Login"
        app:layout_constraintTop_toBottomOf="@+id/edt_pass" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_gmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:background="@drawable/bg_btnngmail"
        android:fontFamily="@font/poppins_medium"
        android:text="Sign in With Gmail"
        android:textColor="@color/brown_gold"
        app:cornerRadius="12dp"
        app:icon="@drawable/ic_google"
        app:iconTintMode="multiply"
        app:iconGravity="textEnd"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/btn_gmail">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/tv_account"
            android:textColor="@color/brown_gold" />

        <TextView
            android:id="@+id/tv_intentRegis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/tv_regis"
            android:textColor="@color/brown_gold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>